# CareChat_DSWB

./: CLAUDE.md  DATABASE_UNIFICATION_ANALYSIS.md  Feedback Analysis Engine.ipynb  MICROSERVICES_ARCHITECTURE.md  README.md  UI_UX_README.md  alembic.ini  pubspec.yaml  render-build.sh
Backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.prod  README_Docker.md  SHARING_GUIDE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  requirements.txt  start.bat  start.sh  test_patient_auth.py
Integrated_backend/: .env.example  .gitignore  AUDIO_CHAT_DOCUMENTATION.md  README.md  diagnose_db.py  (+33 more)
carechat-microservices/api-gateway-fastapi/: .env.example  README_ENV.md  pyproject.toml  requirements.txt
carechat-microservices/api-gateway-fastapi/app/: main.py  models.py  models_backup.py
carechat-microservices/api-gateway-fastapi/app/api/: deps.py
carechat-microservices/api-gateway-fastapi/app/api/v1/: api.py
carechat-microservices/api-gateway-fastapi/app/api/v1/endpoints/: analytics.py  auth.py  chatbot.py  conversations.py  feedback.py  reminders.py  track1_feedback.py  users.py
carechat-microservices/api-gateway-fastapi/app/core/: config.py
carechat-microservices/api-gateway-fastapi/app/db/: __init__.py  collections.py  database.py  dependencies.py  utils.py
carechat-microservices/api-gateway-fastapi/app/models/: __init__.py  conversation.py  feedback.py  reminder.py  user.py
carechat-microservices/api-gateway-fastapi/app/schemas/: __init__.py  analytics.py  auth.py  base.py  conversation.py  feedback.py  reminder.py  user.py
carechat-microservices/api-gateway-fastapi/app/services/: analysis.py  conversation_service.py  llm_service.py  rag_service.py  transcription.py  translation.py
(+405 files in other folders)
